Fix phantom `s` character, and adjust mobile sizing of heading tags.

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="icon-item">
           {{ svg('base/icons/about/organization') }}
-          <p>{{ _('Organization') }}s</p>
+          <p>{{ _('Organization') }}</p>
         </div>
       </div>
     </div>
