Adjust staff list name splitting, and title comma splitting.

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -146,9 +146,15 @@
 {% endblock %}
 
 {% macro job_block(title, name, img) %}
+  {% set name = name.replace(' ', '\n') %}
+  {% set title_lines = split_keep_delimiter(title, ',') %}
 <div class="person">
   {{ img }}
   <h5>{{ name }}</h5>
-  <span>{{ title }}</span>
+  <div class="job-title">
+    {% for line in title_lines %}
+    <span>{{ line }}</span>
+    {% endfor %}
+  </div>
 </div>
 {% endmacro %}
