Staff title update

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -127,7 +127,7 @@
         {{ job_block('Staff Software Engineer, Desktop', 'Martin Giger', high_res_img('thunderbird/staff/martin_giger.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block('Sr. Software Engineer, Services', 'Melissa Autumn', high_res_img('thunderbird/staff/melissa_autumn.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block('UI/UX Designer', 'Micah Ilbery', high_res_img('thunderbird/staff/micah_ilbery.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('', 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('Community & Marketing Coordinator', 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block('Manager, Comms & Community', 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block('Sr. Release Engineer', 'Rob Lemley', high_res_img('thunderbird/staff/rob_lemley.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block('User Support Specialist', 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
