Add new 404 page image, and some localized hero images for homepage.

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -14,7 +14,7 @@ with great features!') }}{% endblock %}
 
 {% block extrahead %}
   {# Preload the most common format here #}
-  <link rel="preload" as="image" href="{{ static('/media/img/thunderbird/new/hero/hero.avif') }}">
+  <link rel="preload" as="image" href="{{ l10n_img('thunderbird/base/home/banner-high-res.avif') }}">
 {% endblock %}
 
 {% block header_content %}
