--- a/sites/www.thunderbird.net/404.html
+++ b/sites/www.thunderbird.net/404.html
@@ -9,16 +9,15 @@
 
 {% block page_title %}{{ _('There\'s Nothing Here') }}{% endblock %}
 {% block page_desc %}{{ not_found_message }}{% endblock %}
-{% block category %}{{ _('????') }}{% endblock %}
+{% block breadcrumbs %}{% endblock %}
 
 {% block content %}
 <section>
   <div class="container">
-    <div class="section-text">
-      <h4>{{ not_found_message }}</h4>
-    </div>
-    <div>
-      <img src="{{ static('img/thunderbird/404/nest.png') }}" alt="{{ _('Empty nest') }}" class="flex w-full max-w-3xl mx-auto pr-8 pl-8">
+    <div class="section-text wide">
+      {{ high_res_img('thunderbird/base/404/lost-mail.png', {'alt': _('A pile of unopened spam mail covering a sign post that reads No Reply.')}, alt_formats=('avif', 'webp')) }}
+      <h3>{{ _('The page you are looking for doesn’t exist.') }}</h3>
+      <p>{{ _('If you think this is a bug, you can <a href="%(bug_report_url)s">report an issue here</a>')|format(bug_report_url=url('thunderbird.site.bug-report')) }}</p>
     </div>
   </div>
 </section>
