--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -104,38 +104,38 @@
     </div>
     <div>
       <div class="job-grid">
-        {{ job_block('Director, Desktop & Mobile Apps', 'Alessandro Castellani', high_res_img('thunderbird/staff/alessandro_castellani.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Director, Infrastructure & Services', 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Staff Engineer, Desktop', 'Ben Campbell', high_res_img('thunderbird/staff/ben_campbell.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
-        {{ job_block('Software Engineer, Desktop', 'Brendan Abolivier', high_res_img('thunderbird/staff/brendan_abolivier.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Software Engineer, Services', 'Chris Aquino', high_res_img('thunderbird/staff/chris_aquino.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Software Engineer, Mobile', 'cketti', high_res_img('thunderbird/staff/cketti.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
-        {{ job_block('Release Engineer', 'Daniel Darnell', high_res_img('thunderbird/staff/daniel_darnell.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Staff Engineer, Desktop', 'Geoff Lankow', high_res_img('thunderbird/staff/geoff_lankow.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Developer Relations Engineer', 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Staff Engineer, Desktop', 'Ikey Doherty', high_res_img('thunderbird/staff/ikey_doherty.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Community Engagement Manager', 'Jason Evangelho', high_res_img('thunderbird/staff/jason_evangelho.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Software Engineer, Desktop Add-ons', 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Site Reliability Engineer', 'Joseph Bass', high_res_img('thunderbird/staff/joseph_bass.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Security Engineer, Desktop', 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Technical PM', 'kelly', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Manager, UI/UX Design Studio', 'Laurel Terlesky', high_res_img('thunderbird/staff/laurel_terlesky.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Managing Director, Operations', 'Lisa McCormack', high_res_img('thunderbird/staff/lisa_mccormack.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Staff Engineer, Desktop', 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Manager, Web Services', 'Malini Das', high_res_img('thunderbird/staff/malini_das.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Employee Experience Partner', 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Staff Software Engineer, Desktop', 'Martin Giger', high_res_img('thunderbird/staff/martin_giger.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Software Engineer, Services', 'Melissa Autumn', high_res_img('thunderbird/staff/melissa_autumn.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('UI/UX Designer', 'Micah Ilbery', high_res_img('thunderbird/staff/micah_ilbery.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Community & Marketing Coordinator', 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Manager, Comms & Community', 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Release Engineer', 'Rob Lemley', high_res_img('thunderbird/staff/rob_lemley.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('User Support Specialist', 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Software Engineer, Desktop', 'Sean Burke', high_res_img('thunderbird/staff/sean_burke.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('UI/UX Designer', 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Software Engineer, Desktop', 'Vineet Deo', high_res_img('thunderbird/staff/vineet_deo.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Community Manager', 'Wayne Mery', high_res_img('thunderbird/staff/wayne_mery.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block('Sr. Software Engineer, Mobile', 'Wolf Montwé', high_res_img('thunderbird/staff/wolf_montwe.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Director, Desktop & Mobile Apps'), 'Alessandro Castellani', high_res_img('thunderbird/staff/alessandro_castellani.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Director, Infrastructure & Services'), 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Staff Engineer, Desktop'), 'Ben Campbell', high_res_img('thunderbird/staff/ben_campbell.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
+        {{ job_block(_('Software Engineer, Desktop'), 'Brendan Abolivier', high_res_img('thunderbird/staff/brendan_abolivier.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Software Engineer, Services'), 'Chris Aquino', high_res_img('thunderbird/staff/chris_aquino.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Software Engineer, Mobile'), 'cketti', high_res_img('thunderbird/staff/cketti.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
+        {{ job_block(_('Release Engineer'), 'Daniel Darnell', high_res_img('thunderbird/staff/daniel_darnell.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Staff Engineer, Desktop'), 'Geoff Lankow', high_res_img('thunderbird/staff/geoff_lankow.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Developer Relations Engineer'), 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Staff Engineer, Desktop'), 'Ikey Doherty', high_res_img('thunderbird/staff/ikey_doherty.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Community Engagement Manager'), 'Jason Evangelho', high_res_img('thunderbird/staff/jason_evangelho.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Software Engineer, Desktop Add-ons'), 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Site Reliability Engineer'), 'Joseph Bass', high_res_img('thunderbird/staff/joseph_bass.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Security Engineer, Desktop'), 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Technical PM'), 'kelly', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Manager, UI/UX Design Studio'), 'Laurel Terlesky', high_res_img('thunderbird/staff/laurel_terlesky.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Managing Director, Operations'), 'Lisa McCormack', high_res_img('thunderbird/staff/lisa_mccormack.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Staff Engineer, Desktop'), 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Manager, Web Services'), 'Malini Das', high_res_img('thunderbird/staff/malini_das.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Employee Experience Partner'), 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Staff Software Engineer, Desktop'), 'Martin Giger', high_res_img('thunderbird/staff/martin_giger.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Software Engineer, Services'), 'Melissa Autumn', high_res_img('thunderbird/staff/melissa_autumn.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('UI/UX Designer'), 'Micah Ilbery', high_res_img('thunderbird/staff/micah_ilbery.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Community & Marketing Coordinator'), 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Manager, Comms & Community'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Release Engineer'), 'Rob Lemley', high_res_img('thunderbird/staff/rob_lemley.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('User Support Specialist'), 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Software Engineer, Desktop'), 'Sean Burke', high_res_img('thunderbird/staff/sean_burke.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('UI/UX Designer'), 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Software Engineer, Desktop'), 'Vineet Deo', high_res_img('thunderbird/staff/vineet_deo.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Community Manager'), 'Wayne Mery', high_res_img('thunderbird/staff/wayne_mery.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Software Engineer, Mobile'), 'Wolf Montwé', high_res_img('thunderbird/staff/wolf_montwe.png', scale='2x', alt_formats=('webp',))) }}
       </div>
     </div>
       <div class="section-text">
