--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -118,7 +118,7 @@
         {{ job_block(_('Sr. Software Engineer, Desktop Add-ons'), 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Site Reliability Engineer'), 'Joseph Bass', high_res_img('thunderbird/staff/joseph_bass.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Security Engineer, Desktop'), 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block(_('Sr. Technical PM'), 'kelly', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Technical PM'), 'Kelly McSweeney', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Manager, UI/UX Design Studio'), 'Laurel Terlesky', high_res_img('thunderbird/staff/laurel_terlesky.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Managing Director, Operations'), 'Lisa McCormack', high_res_img('thunderbird/staff/lisa_mccormack.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Staff Engineer, Desktop'), 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
