Fix some dead links, and add a redirect for now.

--- a/sites/www.thunderbird.net/contact/index.html
+++ b/sites/www.thunderbird.net/contact/index.html
@@ -36,7 +36,7 @@
       {% call contact_block( svg('base/icons/contact/business'), _('Business'), [('mailto:business@thunderbird.net', _('Business Team'))]) %}
         {{ _('Organizations wanting to sponsor software development or obtain assistance in large-scale deployments should email our Business Team. This team also handles other partnership inquiries.') }}
       {% endcall %}
-      {% call contact_block( svg('base/icons/contact/contributors'), _('Contributors'), [(url('thunderbird.contribute'), _('Contributor Page'))]) %}
+      {% call contact_block( svg('base/icons/contact/contributors'), _('Contributors'), [(url('thunderbird.participate'), _('Contributor Page'))]) %}
         {{ _('If you have talents you\'re interested in sharing but don\'t know where to start, learn how to get started by visiting our Contributors page. Here you\'ll find the volunteer community that matches your interests.') }}
       {% endcall %}
       {% call contact_block( svg('base/icons/contact/legal'), _('Legal'), [(url('legal.trademark'), _('Trademark Misuse')), (url('legal.infringement'), _('DMCA Notice'))]) %}
