Adjust some links

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -54,7 +54,7 @@
           <li>{{ _('We will never sell it.') }}</li>
           <li>{{ _('You retain ownership and control of it.') }}</li>
         </ul>
-        <a class="strong" href="{{ url('privacy') }}">{{ _('Read the Privacy Policy') }}</a>
+        <a class="strong" href="{{ url('privacy.notices.thunderbird') }}">{{ _('Read the Privacy Policy') }}</a>
       </div>
     </div>
     <div class="value-section values-freedom">
@@ -76,7 +76,6 @@
         <h3>{{ _('Voice') }}</h3>
         <h4>{{ _('You have a part in Thunderbird\'s future.') }}</h4>
         <p>{{ _('Thunderbird is free from the commercial requirements and incentives that often guide software development. Anyone can get involved in helping make Thunderbird better and available to more people. A contributor-elected council ensures Thunderbird remains true to its values and mission.') }}</p>
-        <strong>{{ _('Keep Reading...') }}</strong>
       </div>
     </div>
   </div>
