--- a/sites/www.thunderbird.net/donate/index.html
+++ b/sites/www.thunderbird.net/donate/index.html
@@ -47,7 +47,7 @@
       <p>{{ _('Organizations deploying Thunderbird at scale or who share our passion for expanding digital freedoms can make a difference by becoming a one-time or recurring corporate sponsor. Small to medium size contributions can be made with the form above. For donations greater than $5000 USD please contact our business team. Thank you in advance for your generous support!') }}</p>
     </div>
     <div class="section-text">
-      <a class="strong" href="mailto:business@thunderbird.net">{{ _('Contact the Business Team') }}</a>
+      <a class="strong" href="mailto:partnerships@thunderbird.net">{{ _('Contact the Business Team') }}</a>
     </div>
     <div class="image">
       {{ high_res_img('thunderbird/base/donate/rocket.png', {'alt': _('A rocket with the Thunderbird logo.')}, alt_formats=('avif', 'webp')) }}
