--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -94,6 +94,7 @@
             <li><a href="{{ url('participate.promote.twitter') }}">{{ _('X (Formerly Twitter)') }}</a></li>
             <li><a href="{{ url('participate.promote.youtube') }}">{{ _('YouTube') }}</a></li>
             <li><a href="{{ url('participate.promote.tilvids') }}">{{ _('TILVids') }}</a></li>
+            <li><a href="{{ url('participate.promote.linkedin') }}">{{ _('LinkedIn') }}</a></li>
           </ul>
         </div>
       {% endcall %}
