--- a/sites/www.thunderbird.net/contact/index.html
+++ b/sites/www.thunderbird.net/contact/index.html
@@ -30,10 +30,10 @@
       {% call contact_block( svg('base/icons/contact/security'), _('Security'), [(url('thunderbird.bugzilla.new-bug'), _('Bugzilla'))]) %}
         {{ _('To report a software vulnerability, please submit an issue on Bugzilla with the security box checked. This checkmark will make the report visible only to our security team, who can address vulnerabilities before public disclosure.') }}
       {% endcall %}
-      {% call contact_block( svg('base/icons/contact/media'), _('Media'), [('mailto:outreach@thunderbird.net', _('Outreach Team'))]) %}
+      {% call contact_block( svg('base/icons/contact/media'), _('Media'), [('mailto:press@thunderbird.net', _('Outreach Team'))]) %}
         {{ _('Thunderbird and the people who make it are amazing. Obtain access to our team for your story, review, or other content by emailing our Outreach Team.') }}
       {% endcall %}
-      {% call contact_block( svg('base/icons/contact/business'), _('Business'), [('mailto:business@thunderbird.net', _('Business Team'))]) %}
+      {% call contact_block( svg('base/icons/contact/business'), _('Business'), [('mailto:partnerships@thunderbird.net', _('Business Team'))]) %}
         {{ _('Organizations wanting to sponsor software development or obtain assistance in large-scale deployments should email our Business Team. This team also handles other partnership inquiries.') }}
       {% endcall %}
       {% call contact_block( svg('base/icons/contact/contributors'), _('Contributors'), [(url('thunderbird.participate'), _('Contributor Page'))]) %}
