Update start page links

--- a/sites/start.thunderbird.net/daily/index.html
+++ b/sites/start.thunderbird.net/daily/index.html
@@ -69,7 +69,7 @@
               <li>{{ _('In Thunderbird do Help > More Troubleshooting Information, scroll to "Crash Reports", click a recent report link to open the crash report page.') }}</li>
               <li>{{ _('Click the Bugzilla tab, then click on an existing bug report under "Related Bugs" and add a comment to the bug, or click "Thunderbird" to submit a new bug report.') }}</li>
             </ul>
-            <a href="https://support.mozilla.org/en-US/kb/mozilla-crash-reporter-tb" class="crash">
+            <a href="https://support.mozilla.org/kb/mozilla-crash-reporter-tb" class="crash">
               {{ _('Crash Reporter') }}
               {{ svg('external-link') }}
             </a>
@@ -95,7 +95,7 @@
               {{ _('Contribute') }}
             </h2>
             <p>{{ _('Curious about helping?  You don’t need to be an expert to help other users or offer suggestions about improving the experience! Join us in this open source project where anyone can participate in the Thunderbird community (You don’t need to be an expert, and you don’t need to know how to code).') }}</p>
-            <a href="https://www.thunderbird.net/en-US/get-involved/" class="get-involved">
+            <a href="https://www.thunderbird.net/participate/" class="get-involved">
               {{ _('Get Involved') }}
               {{ svg('external-link') }}
             </a>
