--- a/sites/start.thunderbird.net/release/index.html
+++ b/sites/start.thunderbird.net/release/index.html
@@ -45,7 +45,7 @@
               {{ _('Help') }}
             </h2>
             <p>{{ _('Curious about helping? You don’t need to be an expert or know how to code to help other users or offer suggestions about improving the experience! Join us in this open source project where anyone can participate in the Thunderbird community.') }}</p>
-            <a href="https://www.thunderbird.net/en-US/get-involved/" class="get-involved">
+            <a href="https://www.thunderbird.net/participate/" class="get-involved">
               {{ _('Get Involved') }}
               {{ svg('external-link') }}
             </a>
@@ -55,7 +55,7 @@
               {{ svg('external-link') }}
             </a>
             <p>{{ _('Help make Thunderbird better.') }}</p>
-            <a href="https://www.thunderbird.net/download/beta/" class="get-involved">
+            <a href="https://www.thunderbird.net/thunderbird/all/?release=beta" class="get-involved">
               {{ _('Get the Beta') }}
               {{ svg('external-link') }}
             </a>
