--- a/sites/www.thunderbird.net/donate/index.html
+++ b/sites/www.thunderbird.net/donate/index.html
@@ -39,12 +39,12 @@
   </div>
 </section>
 {% include 'includes/components/page-separator.html' %}
-<section id="become-a-corporate-sponsor">
+<section id="become-a-corporate-supporter">
   <div class="container">
     <div class="section-text">
-      <h2>{{ _('Become a <span class="txt-gradient">Corporate Sponsor</span>') }}</h2>
+      <h2>{{ _('Become a <span class="txt-gradient">Corporate Supporter</span>') }}</h2>
       <h4>{{ _('Secure an open future for yourself and the world.') }}</h4>
-      <p>{{ _('Organizations deploying Thunderbird at scale or who share our passion for expanding digital freedoms can make a difference by becoming a one-time or recurring corporate sponsor. Small to medium size contributions can be made with the form above. For donations greater than $5000 USD please contact our business team. Thank you in advance for your generous support!') }}</p>
+      <p>{{ _('Organizations deploying Thunderbird at scale or who share our passion for expanding digital freedoms can make a difference by becoming a one-time or recurring corporate supporter. Small to medium size contributions can be made with the form above. For donations greater than $5000 USD please contact our business team. Thank you in advance for your generous support!') }}</p>
     </div>
     <div class="section-text">
       <a class="strong" href="mailto:partnerships@thunderbird.net">{{ _('Contact the Business Team') }}</a>
