--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -15,6 +15,7 @@
       <div class="section-text">
         <h2>{{ _('We Need Your <span class="txt-gradient">Talents</span>') }}</h2>
         <h4>{{ _('Everyone can be a contributor. Here are some of the ways you can help.') }}</h4>
+        <p>{{ _('Volunteers help create Thunderbird and ensure it is accessible throughout the world in dozens of languages. They write the documentation and answer the questions that help regular people use Thunderbird.') }}</p>
       </div>
       {% call accordion(svg('base/icons/participate/code'), _('Code')) %}
         <p>
@@ -120,7 +121,7 @@
       <div class="section-text">
         <h2>{{ _('Contributor <span class="txt-gradient">Experience</span>') }}</h2>
         <h4>{{ _('The ways and reasons to get involved are as diverse as the people who do.') }}</h4>
-        <p>{{ _('Volunteers create Thunderbird and ensure it is accessible throughout the world in dozens of languages. They write the documentation and answer the questions that help regular people use Thunderbird. They come from diverse backgrounds and bring unique talents. They\'re making Thunderbird better for themselves and better for the world at the same time. You can join them.') }}</p>
+        <p>{{ _('Our volunteers come from diverse backgrounds and bring unique talents. They\'re making Thunderbird better for themselves and better for the world at the same time. You can join them.') }}</p>
       </div>
     </div>
     <div class="container no-gap">
@@ -153,7 +154,7 @@
         <div class="section-text tight">
           <h2>{{ _('Shape the <span class="txt-gradient">Future</span>') }}</h2>
           <h4>{{ _('Improve software and lives by volunteering.') }}</h4>
-          <p>{{ _('Craft tools you want to use. Help others find and use software that respects their privacy and freedom. Become part of a better future for yourself and others by putting your talents to work at Thunderbird. Read further to learn how.') }}</p>
+          <p>{{ _('Craft tools you want to use. Help others find and use software that respects their privacy and freedom. Become part of a better future for yourself and others by putting your talents to work at Thunderbird.') }}</p>
         </div>
         <div class="image">
           {{ high_res_img('thunderbird/base/participate/gears.png', {'alt': _('Various gears all working in tandem with a heart, a code symbol, a magnifying glass displaying a very small bug, and the Thunderbird Logo in the centre of it all.')}, alt_formats=('avif', 'webp')) }}
