--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="section-text">
       <h2>{{ _('Meet <span class="txt-gradient">Thunderbird</span>') }}</h2>
-      <p>{{ _('Thunderbird is a free and open-source software project founded in 2003 to make organizing and communicating easier. We are supported by the talent and donations of thousands of generous individuals and are backed by Mozilla. Essential values guide us and make our work relevant. Read further to learn more.') }}</p>
+      <p>{{ _('Thunderbird is a free and open-source software project founded in 2003 to make communicating and collaborating better. We are supported by the talent and donations of thousands of generous individuals and are backed by Mozilla. Essential values guide us and make our work relevant. Read further to learn more.') }}</p>
     </div>
     <div class="icon-grid-container">
       <div class="icon-grid">
@@ -98,12 +98,13 @@
   <div class="container">
     <div class="section-text">
       <h2>{{ _('Supported by <span class="txt-gradient">Mozilla</span>') }}</h2>
-      <p>{{ _('Thunderbird operates as a for-profit subsidiary of the non-profit Mozilla Foundation. This grants us flexibility in hiring and offering optional paid services to sustain Thunderbird\'s development of free and open-source software far into the future.') }}</p>
-      <p>{{ _('We have a growing team of talented individuals employed to support the efforts of our contributor community, interface with partner organizations, and maximize the reach of Thunderbird throughout the world.') }}</p>
+      <p>{{ _('Thunderbird operates in a for-profit subsidiary of the non-profit Mozilla Foundation. This grants us flexibility in offering optional paid services to sustain Thunderbird\'s development far into the future.') }}</p>
+      <p>{{ _('We have a growing team of talented individuals employed to develop and maintain Thunderbird, interface with partner organizations, and maximize the reach of Thunderbird throughout the world.') }}</p>
     </div>
     <div>
       <div class="job-grid">
         {{ job_block(_('Director, Desktop & Mobile Apps'), 'Alessandro Castellani', high_res_img('thunderbird/staff/alessandro_castellani.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('UX Engineer, Desktop'), 'Alex Schmitz', high_res_img('thunderbird/staff/alexander_schmitz.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Director, Infrastructure & Services'), 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Staff Engineer, Desktop'), 'Ben Campbell', high_res_img('thunderbird/staff/ben_campbell.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
         {{ job_block(_('Software Engineer, Desktop'), 'Brendan Abolivier', high_res_img('thunderbird/staff/brendan_abolivier.png', scale='2x', alt_formats=('webp',))) }}
@@ -130,8 +131,10 @@
         {{ job_block(_('Manager, Comms & Community'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Release Engineer'), 'Rob Lemley', high_res_img('thunderbird/staff/rob_lemley.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('User Support Specialist'), 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Managing Director, Product'), 'Ryan Sipes', high_res_img('thunderbird/staff/ryan_sipes.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Software Engineer, Desktop'), 'Sean Burke', high_res_img('thunderbird/staff/sean_burke.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('UI/UX Designer'), 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr. Manager, Desktop Engineering'), 'Toby Pilling', high_res_img('thunderbird/staff/toby_pilling.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Software Engineer, Desktop'), 'Vineet Deo', high_res_img('thunderbird/staff/vineet_deo.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Community Manager'), 'Wayne Mery', high_res_img('thunderbird/staff/wayne_mery.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Software Engineer, Mobile'), 'Wolf Montwé', high_res_img('thunderbird/staff/wolf_montwe.png', scale='2x', alt_formats=('webp',))) }}
