--- a/sites/www.thunderbird.net/donate/index.html
+++ b/sites/www.thunderbird.net/donate/index.html
@@ -15,7 +15,7 @@
     <div class="section-text tight info-column">
       <h2>{{ _('Become a <span class="txt-gradient">Supporter</span>') }}</h2>
       <h4>{{ _('Help us make Thunderbird better.') }}</h4>
-      <p>{{ _('MZLA Corporation is the for-profit organization sustaining the free software mission of Thunderbird. Our work is to provide open source apps that are secure, private and free for users around the world. When you donate you help us:') }}</p>
+      <p>{{ _('MZLA Corporation is the for-profit organization sustaining the free software mission of Thunderbird. Our work is to provide open source apps that are secure, private and available for users around the world. When you donate you help us:') }}</p>
       <ul class="styled-list">
         <li>{{ _('Develop new apps, integrations and features') }}</li>
         <li>{{ _('Improve the interface, speed, and stability') }}</li>
