--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -103,9 +103,14 @@
     </div>
     <div>
       <div class="job-grid">
+        {# Specific order #}
+        {{ job_block(_('Managing Director, Operations'), 'Lisa McCormack', high_res_img('thunderbird/staff/lisa_mccormack.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Managing Director, Product'), 'Ryan Sipes', high_res_img('thunderbird/staff/ryan_sipes.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Director, Desktop & Mobile Apps'), 'Alessandro Castellani', high_res_img('thunderbird/staff/alessandro_castellani.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block(_('UX Engineer, Desktop'), 'Alex Schmitz', high_res_img('thunderbird/staff/alexander_schmitz.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Director, Infrastructure & Services'), 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
+
+        {# Alphabetical by first name #}
+        {{ job_block(_('UX Engineer, Desktop'), 'Alex Schmitz', high_res_img('thunderbird/staff/alexander_schmitz.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Staff Engineer, Desktop'), 'Ben Campbell', high_res_img('thunderbird/staff/ben_campbell.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
         {{ job_block(_('Software Engineer, Desktop'), 'Brendan Abolivier', high_res_img('thunderbird/staff/brendan_abolivier.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Software Engineer, Services'), 'Chris Aquino', high_res_img('thunderbird/staff/chris_aquino.png', scale='2x', alt_formats=('webp',))) }}
@@ -120,7 +125,6 @@
         {{ job_block(_('Sr. Security Engineer, Desktop'), 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Technical PM'), 'Kelly McSweeney', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Manager, UI/UX Design Studio'), 'Laurel Terlesky', high_res_img('thunderbird/staff/laurel_terlesky.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block(_('Managing Director, Operations'), 'Lisa McCormack', high_res_img('thunderbird/staff/lisa_mccormack.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Staff Engineer, Desktop'), 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Manager, Web Services'), 'Malini Das', high_res_img('thunderbird/staff/malini_das.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Employee Experience Partner'), 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
@@ -131,7 +135,6 @@
         {{ job_block(_('Manager, Comms & Community'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Release Engineer'), 'Rob Lemley', high_res_img('thunderbird/staff/rob_lemley.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('User Support Specialist'), 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block(_('Managing Director, Product'), 'Ryan Sipes', high_res_img('thunderbird/staff/ryan_sipes.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Software Engineer, Desktop'), 'Sean Burke', high_res_img('thunderbird/staff/sean_burke.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('UI/UX Designer'), 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Manager, Desktop Engineering'), 'Toby Pilling', high_res_img('thunderbird/staff/toby_pilling.png', scale='2x', alt_formats=('webp',))) }}
