Replace test donation form element with the real one.

--- a/sites/www.thunderbird.net/donate/index.html
+++ b/sites/www.thunderbird.net/donate/index.html
@@ -32,8 +32,7 @@
       </ul>
     </div>
     <div class="section-text donation-column">
-      <!-- TODO: Replace with the actual element, this is just a clone. -->
-      <a href="#XVBPRKMH" style="display: none"></a>
+      <a href="#XVFNMBAK" style="display: none"></a>
       <p>{% trans trimmed url=url('thunderbird.donate.modify') %}<a class="dotted" href="{{ url }}">Modify</a> an existing monthly donation.{% endtrans %}</p>
     </div>
   </div>
