Fix "Specific installer" animation jitter

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -67,7 +67,7 @@
               <span class="chevron-svg" aria-hidden="true">{{ svg('chevron-down') }}</span>
               {{ _('Need a specific installer?') }}
             </summary>
-            <div>
+            <div class="answer">
               <label class="pretend-to-be-h6" for="download-advanced-platform-select" role="group">
                 <strong>{{ _('Installer Type') }}</strong>
               </label>
