Lots of cleanup: * Remove hamburger-btn overrides / style * Consolidate btn-hamburger into buttons.less * Override --nav-txt for homepage and scrolled-nav * Replace btn-no-bg with btn-transparent * Specify hero button class for homepage * Additional clean up

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -31,7 +31,7 @@ with great features!') }}{% endblock %}
       </div>
       <div class="hero-download">
         <div class="download-button">
-          {{ download_thunderbird(force_direct=true, alt_copy=_('Download'), section="homepage-hero") }}
+          {{ download_thunderbird(force_direct=true, alt_copy=_('Download'), button_class='btn-hero-download', section="homepage-hero") }}
         </div>
       </div>
     </div>
