Swap l10n helpers for trans trimmed blocks

--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -24,58 +24,78 @@
     <section class="appeal-welcome">
       <header>{{_('Welcome to the evolution of Supernova!')}}</header>
       <p>
-        {{_('With revolutionary code improvements, Nebula sets the stage for
+        {% trans trimmed %}
+        With revolutionary code improvements, Nebula sets the stage for
         faster delivery of new features, reinforced stability, stellar
-        quality-of-life enhancements and visual refinements.')}}
+        quality-of-life enhancements and visual refinements.
+        {% endtrans %}
       </p>
     </section>
 
     <section class="fast-and-fluid">
       <header>{{_('Fast and Fluid')}}</header>
-      <p>{{_('Feel the difference smarter code makes possible! Interactions with your message list are faster, the email space is more responsive, and Thunderbird is more stable and reliable.')}}</p>
+      <p>
+        {% trans trimmed %}
+        Feel the difference smarter code makes possible! Interactions with your
+        message list are faster, the email space is more responsive, and
+        Thunderbird is more stable and reliable.
+        {% endtrans %}
+      </p>
     </section>
 
     <section class="cards-view">
       <header>{{_('Cards View')}}</header>
       <p>
-        {{_('The updated design makes scanning your emails faster, with a more
+        {% trans trimmed %}
+        The updated design makes scanning your emails faster, with a more
         attractive layout and an improved threads experience. Plus, the height
         of email cards adjusts automatically based on your settings, so
-        everything looks just right.')}}
+        everything looks just right.
+        {% endtrans %}
       </p>
     </section>
 
     <section class="accent-colors">
       <header>{{_('Accent Colors')}}</header>
       <p>
-        {{_('Enhanced theme compatibility, especially for Linux users on Ubuntu
+        {% trans trimmed %}
+        Enhanced theme compatibility, especially for Linux users on Ubuntu
         and Mint. Your Thunderbird will better blend with your desktop
-        environment, seamlessly matching the system’s accent colors.')}}
+        environment, seamlessly matching the system’s accent colors.
+        {% endtrans %}
       </p>
     </section>
 
     <section class="folder-pane">
       <header>{{_('Folder Pane')}}</header>
       <p>
-        {{_('A bundle of improvements including faster rendering and searching
+        {% trans trimmed %}
+        A bundle of improvements including faster rendering and searching
         of unified folders, multi-folder selection capabilities, and better
-        recall of message thread states.')}}
+        recall of message thread states.
+        {% endtrans %}
       </p>
     </section>
 
     <section class="rust-revolution">
       <header>{{_('Rust Revolution')}}</header>
       <p>
-        {{_("We've overcome major roadblocks to bring Rust into Thunderbird.
+        {% trans trimmed %}
+        We've overcome major roadblocks to bring Rust into Thunderbird.
         This paves the way for better code, shared features between desktop and
         mobile, and faster development time. It's a game-changer for our
-        developers and for our users.")}}
+        developers and for our users.
+        {% endtrans %}
       </p>
     </section>
 
     <section class="streamlined-menu full-width">
       <p>
-        {{_('Streamlined menu navigation with better visual cues and less cognitive burden to make your email experience more efficient and more enjoyable.')}}
+        {% trans trimmed %}
+        Streamlined menu navigation with better visual cues and less
+        cognitive burden to make your email experience more efficient
+        and more enjoyable.
+        {% endtrans %}
       </p>
     </section>
 
@@ -83,25 +103,40 @@
       <div class="column">
         <header>{{ _('Native Windows Notifications')}}</header>
         <p>
-          {{ _('Fixed and fully functional! Clicking a notification dismisses it, brings Thunderbird to the foreground, and selects the message. Notifications now disappear when Thunderbird closes.')}}
+          {% trans trimmed %}
+          Fixed and fully functional! Clicking a notification dismisses it,
+          brings Thunderbird to the foreground, and selects the message.
+          Notifications now disappear when Thunderbird closes.
+          {% endtrans %}
         </p>
       </div>
       <div class="column">
         <header>{{ _('Context Menu Improvements')}}</header>
         <p>
-          {{ _('Reorganized for a smoother experience, with primary actions now as icons for quick access.')}}
+          {% trans trimmed %}
+          Reorganized for a smoother experience, with primary actions
+          now as icons for quick access.
+          {% endtrans %}
         </p>
       </div>
       <div class="column">
         <header>{{ _('Account Color Customization')}}</header>
         <p>
-          {{ _('By popular demand, you can now customize the color of your account icons. These colors also show up in the “From” selection when composing emails.')}}
+          {% trans trimmed %}
+          By popular demand, you can now customize the color of your account
+          icons. These colors also show up in the “From” selection
+          when composing emails.
+          {% endtrans %}
         </p>
       </div>
     </section>
     <section class="nebula-enables full-width">
       <p>
-        {{_('“Nebula” enables an email experience that shines brighter than ever.  Expect more updates and helpful new features to materialize over the upcoming months.')}}
+        {% trans trimmed %}
+        “Nebula” enables an email experience that shines brighter than ever.
+        Expect more updates and helpful new features to materialize over
+        the upcoming months.
+        {% endtrans %}
       </p>
     </section>
   </div>
